IVYPORTAL-10235: Enhance Navigation from a task inside the "Case Information" - Fixed alignment of back link in task details

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -777,6 +777,10 @@ span.case-details-document-add-link, span.task-details-document-add-link {
   .case-details-back-btn, .task-details-back-btn {
     text-align: left;
   }
+
+  .iframe-body .task-details-back-btn {
+    text-align: right;
+  }
 }
 
 .case-detail-title-header-container {
